# isogeny_rs

./: Cargo.toml
benches/: bench_product_isogeny.rs  bench_quat_mul.rs  bench_scholten.rs
src/: lib.rs
src/protocols/: sqisign.rs
src/quaternion/: algebra.rs  bigint_crypto.rs  bigint_num.rs  hnf.rs  lattice.rs  matrix.rs  mod.rs
src/theta/: theta_chain.rs  theta_isogeny.rs
tests/: test_algebra.rs  test_hnf.rs  test_lattice.rs  test_product_isogeny.rs
