[package]
name = "isogeny"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = "0.7.3"
fp2 = "0.3.0"
num-bigint = "0.4.3"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.9"
rand_core = "0.9"
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
hex = "0.4.3"
sha2 = "0.10.2"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rayon = "1.10.0"

[features]
kat-tests = []

# [[bench]]
# name = "bench_scholten"
# path = "benches/bench_scholten.rs"
# harness = false

[[bench]]
name = "bench_velu"
path = "benches/bench_velu.rs"
harness = false

# [[bench]]
# name = "bench_quat_mul"
# path = "benches/bench_quat_mul.rs"
# harness = false

# [[bench]]
# name = "bench_sidh"
# path = "benches/bench_sidh.rs"
# harness = false

# [[bench]]
# name = "bench_sqisign_verification"
# path = "benches/bench_sqisign_verification.rs"
# harness = false

# [[bench]]
# name = "bench_product_isogeny"
# path = "benches/bench_product_isogeny.rs"
# harness = false

# [[bench]]
# name = "bench_biscalar_ladder"
# path = "benches/bench_biscalar_ladder.rs"
# harness = false

# [[bench]]
# name = "bench_poly_mul"
# path = "benches/bench_poly_mul.rs"
# harness = false
